--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,7 @@
 @import "variables";
-@import "node_modules/bootstrap/scss/bootstrap";
-
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 .border-wave {
-
   display: inline-block;
   position: relative;
   width: 100%;
