--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,3 +20,28 @@
 .demo-image {
   height: 450px;
 }
+
+// Large
+@media (min-width: 992px) {
+  .top-column-lg {
+    margin-top: -17em !important;
+  }
+}
+
+// Smaller than large
+@media (max-width: 991.98px) {
+  .top-column-lg {
+    margin-top: -10em !important;
+  }
+}
+
+// Larger than small
+@media (max-width: 575.98px) {
+  .top-column-lg {
+    margin-top: -7em !important;
+  }
+
+  .demo-image {
+    height: 300px;
+  }
+}
