--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,10 @@
 @import "variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+.header-links a:hover {
+  text-decoration: none;
+}
+
 .border-wave {
   display: inline-block;
   position: relative;
