--- a/css/styles.css
+++ b/css/styles.css
@@ -9925,6 +9925,10 @@ h3 {
   .top-column-lg {
     margin-top: -10em !important;
   }
+
+  h1 {
+    font-size: 2rem;
+  }
 }
 @media (max-width: 575.98px) {
   .top-column-lg {
