Update for new products

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,8 +1,16 @@
 
 $gray-400: #dcdbdb;
 $red: #e53935;
+$dark-red: #b43c3c;
+$light-red: #c4443c;
+
 $orange: #fb8c00;
 $gray-900: #282726;
 $green: #7cb342;
 $blue: #478fcc;
 $yellow: #feea3a;
+
+$primary: $gray-900;
+$link-color: $dark-red;
+$link-hover-color: $red;
+
