--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #478fcc;
+  --primary: #282726;
   --secondary: #6c757d;
   --success: #7cb342;
   --info: #17a2b8;
@@ -152,12 +152,12 @@ sup {
 }
 
 a {
-  color: #478fcc;
+  color: #b43c3c;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #2b689b;
+  color: #e53935;
   text-decoration: underline;
 }
 
@@ -1698,21 +1698,21 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #cbe0f1;
+  background-color: #c3c3c2;
 }
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #9fc5e4;
+  border-color: #8f8f8e;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #b7d4ec;
+  background-color: #b6b6b5;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #b7d4ec;
+  background-color: #b6b6b5;
 }
 
 .table-secondary,
@@ -1985,9 +1985,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #abcce8;
+  border-color: #696764;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .form-control::placeholder {
   color: #6c757d;
@@ -2401,7 +2401,7 @@ textarea.form-control {
 }
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
@@ -2416,32 +2416,32 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #337cb9;
-  border-color: #3175af;
+  background-color: #141413;
+  border-color: #0e0e0d;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #337cb9;
-  border-color: #3175af;
-  box-shadow: 0 0 0 0.2rem rgba(99, 160, 212, 0.5);
+  background-color: #141413;
+  border-color: #0e0e0d;
+  box-shadow: 0 0 0 0.2rem rgba(72, 71, 71, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #3175af;
-  border-color: #2e6fa5;
+  background-color: #0e0e0d;
+  border-color: #070707;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(99, 160, 212, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(72, 71, 71, 0.5);
 }
 
 .btn-secondary {
@@ -2655,28 +2655,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #478fcc;
-  border-color: #478fcc;
+  color: #282726;
+  border-color: #282726;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #478fcc;
+  color: #282726;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2856,11 +2856,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #478fcc;
+  color: #b43c3c;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #2b689b;
+  color: #e53935;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -3133,7 +3133,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #478fcc;
+  background-color: #282726;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3460,19 +3460,19 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #478fcc;
-  background-color: #478fcc;
+  border-color: #282726;
+  background-color: #282726;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #abcce8;
+  border-color: #696764;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #d3e4f3;
-  border-color: #d3e4f3;
+  background-color: #84807d;
+  border-color: #84807d;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
@@ -3516,17 +3516,17 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #478fcc;
-  background-color: #478fcc;
+  border-color: #282726;
+  background-color: #282726;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(71, 143, 204, 0.5);
+  background-color: rgba(40, 39, 38, 0.5);
 }
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(71, 143, 204, 0.5);
+  background-color: rgba(40, 39, 38, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3536,7 +3536,7 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(71, 143, 204, 0.5);
+  background-color: rgba(40, 39, 38, 0.5);
 }
 
 .custom-switch {
@@ -3567,7 +3567,7 @@ input[type=button].btn-block {
   transform: translateX(0.75rem);
 }
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(71, 143, 204, 0.5);
+  background-color: rgba(40, 39, 38, 0.5);
 }
 
 .custom-select {
@@ -3586,9 +3586,9 @@ input[type=button].btn-block {
   appearance: none;
 }
 .custom-select:focus {
-  border-color: #abcce8;
+  border-color: #696764;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-select:focus::-ms-value {
   color: #495057;
@@ -3644,8 +3644,8 @@ input[type=button].btn-block {
   opacity: 0;
 }
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #abcce8;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  border-color: #696764;
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-file-input[disabled] ~ .custom-file-label, .custom-file-input:disabled ~ .custom-file-label {
   background-color: #e9ecef;
@@ -3700,13 +3700,13 @@ input[type=button].btn-block {
   outline: none;
 }
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 .custom-range::-moz-focus-outer {
   border: 0;
@@ -3715,7 +3715,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #478fcc;
+  background-color: #282726;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3727,7 +3727,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #d3e4f3;
+  background-color: #84807d;
 }
 .custom-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -3741,7 +3741,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #478fcc;
+  background-color: #282726;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3753,7 +3753,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-moz-range-thumb:active {
-  background-color: #d3e4f3;
+  background-color: #84807d;
 }
 .custom-range::-moz-range-track {
   width: 100%;
@@ -3770,7 +3770,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #478fcc;
+  background-color: #282726;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3782,7 +3782,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-ms-thumb:active {
-  background-color: #d3e4f3;
+  background-color: #84807d;
 }
 .custom-range::-ms-track {
   width: 100%;
@@ -3889,7 +3889,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #478fcc;
+  background-color: #282726;
 }
 
 .nav-fill > .nav-link,
@@ -4538,13 +4538,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #478fcc;
+  color: #b43c3c;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #2b689b;
+  color: #e53935;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4552,7 +4552,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4567,8 +4567,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4644,15 +4644,15 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #478fcc;
+  background-color: #282726;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #3175af;
+  background-color: #0e0e0d;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(71, 143, 204, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(40, 39, 38, 0.5);
 }
 
 .badge-secondary {
@@ -4792,15 +4792,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #254a6a;
-  background-color: #dae9f5;
-  border-color: #cbe0f1;
+  color: #151414;
+  background-color: #d4d4d4;
+  border-color: #c3c3c2;
 }
 .alert-primary hr {
-  border-top-color: #b7d4ec;
+  border-top-color: #b6b6b5;
 }
 .alert-primary .alert-link {
-  color: #183044;
+  color: black;
 }
 
 .alert-secondary {
@@ -4913,7 +4913,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #478fcc;
+  background-color: #282726;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4992,8 +4992,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #478fcc;
-  border-color: #478fcc;
+  background-color: #282726;
+  border-color: #282726;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5133,17 +5133,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #254a6a;
-  background-color: #cbe0f1;
+  color: #151414;
+  background-color: #c3c3c2;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #254a6a;
-  background-color: #b7d4ec;
+  color: #151414;
+  background-color: #b6b6b5;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #254a6a;
-  border-color: #254a6a;
+  background-color: #151414;
+  border-color: #151414;
 }
 
 .list-group-item-secondary {
@@ -6000,13 +6000,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #478fcc !important;
+  background-color: #282726 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #3175af !important;
+  background-color: #0e0e0d !important;
 }
 
 .bg-secondary {
@@ -6128,7 +6128,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #478fcc !important;
+  border-color: #282726 !important;
 }
 
 .border-secondary {
@@ -9691,11 +9691,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #478fcc !important;
+  color: #282726 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #2b689b !important;
+  color: #010101 !important;
 }
 
 .text-secondary {
@@ -9893,8 +9893,34 @@ h3 {
     border-color: #dee2e6;
   }
 }
+@media (min-width: 992px) {
+  .logo-bg {
+    background-color: #fff;
+    position: absolute;
+    top: 2px;
+  }
+
+  .logo-image {
+    width: 70px;
+  }
+}
+@media (max-width: 991.98px) {
+  .logo-bg {
+    padding: 5px;
+  }
+
+  .logo-image {
+    width: 60px;
+  }
+}
+.header-links a {
+  text-decoration: none;
+  filter: brightness(100%);
+}
+
 .header-links a:hover {
   text-decoration: none;
+  filter: brightness(120%);
 }
 
 .border-wave {
@@ -9912,31 +9938,43 @@ h3 {
   left: 0;
 }
 
-.demo-image {
-  height: 450px;
-}
-
 @media (min-width: 992px) {
   .top-column-lg {
-    margin-top: -17em !important;
+    margin-top: -16em !important;
+  }
+
+  .product-card {
+    min-height: 400px;
+  }
+
+  .product-card > a > img {
+    width: 50%;
   }
 }
 @media (max-width: 991.98px) {
   .top-column-lg {
-    margin-top: -10em !important;
+    margin-top: -8em !important;
   }
 
   h1 {
     font-size: 1.8rem;
   }
+
+  .product-card {
+    min-height: 300px;
+  }
+
+  .product-card > a > img {
+    width: 50%;
+  }
 }
 @media (max-width: 575.98px) {
   .top-column-lg {
-    margin-top: -7em !important;
+    margin-top: 0em !important;
   }
 
-  .demo-image {
-    height: 300px;
+  .product-card {
+    min-height: 200px;
   }
 }
 
