--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,40 @@
 @import "variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+// Logo - Large
+@media (min-width: 992px) {
+  .logo-bg {
+    background-color: $white;
+    position: absolute;
+    top: 2px;
+  }
+
+  .logo-image {
+    width: 70px;
+  }
+}
+
+// Logo - Smaller than large
+@media (max-width: 991.98px) {
+  .logo-bg {
+    padding: 5px;
+  }
+
+  .logo-image {
+    width: 60px;
+  }
+}
+
+
+// Header
+.header-links a {
+  text-decoration: none;
+  filter: brightness(100%);
+}
+
 .header-links a:hover {
   text-decoration: none;
+  filter: brightness(120%);
 }
 
 .border-wave {
@@ -21,35 +53,47 @@
   }
 }
 
-.demo-image {
-  height: 450px;
-}
-
 // Large
 @media (min-width: 992px) {
   .top-column-lg {
-    margin-top: -17em !important;
+    margin-top: -16em !important;
+  }
+
+  .product-card {
+    min-height: 400px;
+  }
+
+  .product-card > a > img {
+    width: 50%;
   }
 }
 
 // Smaller than large
 @media (max-width: 991.98px) {
   .top-column-lg {
-    margin-top: -10em !important;
+    margin-top: -8em !important;
   }
 
   h1 {
     font-size: 1.8rem;
+  }
+
+  .product-card {
+    min-height: 300px;
+  }
+
+  .product-card > a > img {
+    width: 50%;
   }
 }
 
 // Larger than small
 @media (max-width: 575.98px) {
   .top-column-lg {
-    margin-top: -7em !important;
+    margin-top: 0em !important;
   }
 
-  .demo-image {
-    height: 300px;
+  .product-card {
+    min-height: 200px;
   }
 }
