--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -10,7 +10,7 @@ $green: #7cb342;
 $blue: #478fcc;
 $yellow: #feea3a;
 
-$primary: $gray-900;
+$primary: $red;
 $link-color: $dark-red;
 $link-hover-color: $red;
 
