WIP polish new lp style

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,4 @@
 @import 'variables';
 @import 'bootstrap';
-@import "background";
-@import "header";
-@import "logo";
+@import 'header';
+@import 'logo';
