--- a/src/css/_ribbon.scss
+++ b/src/css/_ribbon.scss
@@ -21,7 +21,7 @@
   z-index: -1;
   content: '';
   display: block;
-  border: 5px solid #2980b9;
+  border: 5px solid #5c9322;
 }
 
 .ribbon span {
@@ -29,10 +29,10 @@
   display: block;
   width: 225px;
   padding: 15px 0;
-  background-color: #3498db;
+  background-color: #7cb342;
   box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
   color: #fff;
-  font: 700 18px/1 'Lato', sans-serif;
+  font: 600 18px/1 'Lato', sans-serif;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
   text-transform: uppercase;
   text-align: center;
