Build for deploy

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -10,7 +10,7 @@ $green: #7cb342;
 $blue: #478fcc;
 $yellow: #feea3a;
 
-$primary: $red;
+$primary: $blue;
 $secondary: $orange;
-$link-color: $dark-red;
+$link-color: $blue;
 $link-hover-color: $red;
